Bug 1620311 - Set an explicit accessibility label for image-only buttons, r=harry

Differential Revision: https://phabricator.services.mozilla.com/D66601